--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
+    "@mui/styles": "^5.2.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -15,10 +16,17 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "js-file-download": "^0.4.12",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-query": "^3.32.1",
+    "react-router": "^6.0.2",
+    "react-router-dom": "6",
     "react-scripts": "4.0.3",
+    "react-toast-notifications": "^2.5.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -65,5 +73,7 @@
     "@storybook/node-logger": "^6.3.12",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.12"
-  }
+  },
+  "proxy":"http://localhost:8000/api/"
+
 }
